--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,8 @@
 version: 2.1
+
+orbs:
+  aws-s3: circleci/aws-s3@2.0.0
+
 jobs:
   build:
     working_directory: ~/public
@@ -9,3 +13,16 @@ jobs:
           name: install git
           command: apk update && apk add git
       - checkout
+      - aws-s3/sync:
+          arguments: |
+            --acl public-read \
+            --cache-control "max-age=86400"
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-region: AWS_REGION
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          from: public
+          to: 's3://connorglynn.com'
+      - aws-s3/copy:
+          arguments: '--dryrun'
+          from: public
+          to: 's3://connorglynn.com'
