--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     working_directory: ~/public
     docker:
-      - image: alpine:3.7
+      - image: 'cimg/python:3.6'
     steps:
       - run:
           name: install git
