--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,5 +11,6 @@ jobs:
     steps:
       - checkout
       - aws-s3/copy:
+          arguments: '--recursive'
           from: public
           to: 's3://connorglynn.com'
