--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   aws-s3: circleci/aws-s3@2.0.0
+  jira: circleci/jira@1.3.1
 
 jobs:
   build:
@@ -14,3 +15,5 @@ jobs:
           arguments: '--recursive'
           from: public
           to: 's3://connorglynn.com'
+    post-steps:
+      - jira/notify
