fix circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,5 +15,5 @@ jobs:
           arguments: '--recursive'
           from: public
           to: 's3://connorglynn.com'
-    post-steps:
-      - jira/notify
+      - post-steps:
+          - jira/notify
